# dlib

./: CMakeLists.txt
cmake/: Config.cmake.in
dlib/: CMakeLists.txt  assert.h
dlib/cmake_utils/: cmake_find_blas.txt  dlibConfig.cmake.in  find_blas.cmake
